--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
         padding: 0;
         margin: 0;
       }
-      
+      #map {background-color: #9FB4CC;}
+      button {
+        border-radius: 4px;
+        background-color: #fff;
+      }
       #resetBt {
           position: absolute;
           top: 15px;
