reverting to plain icons

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   <body>
     <nav id='menu-ui' class='menu-ui'>
       <p style="border-bottom:1px solid rgba(0,0,0,0.25); margin: 0; padding: 5px;">Toggle Data: </p>
+      <div style="border-bottom:1px solid rgba(0,0,0,0.25); margin: 0; padding: 10px;"><i class="fa fa-lg fa-circle-o media sp"></i>Multimedia content</div>
     </nav>
     <div id="map">
       <button id="resetBt" onclick=location.reload()>Reset Map</button>
