--- a/index.html
+++ b/index.html
@@ -41,12 +41,20 @@
     
   </head>
   <body>
-    <nav id='menu-ui' class='menu-ui'>
+    <!--nav id='menu-ui' class='menu-ui'>
       <p style="border-bottom:1px solid rgba(0,0,0,0.25); margin: 0; padding: 5px;">Toggle Data: </p>
       <div style="border-bottom:1px solid rgba(0,0,0,0.25); margin: 0; padding: 10px;"><i class="fa fa-lg fa-circle-o media sp"></i>Multimedia content</div>
-    </nav>
+    </nav-->
+    <div id='filters' class='ui-select'>
+      <p class='legend'>Legend</p><hr>
+      <h6 class='legend-sub'>Litigation pursued by SELC</h6>
+      <div><input type='checkbox' checked=checked class='filter'
+                 name='filter' id='yes-ltg' value='Yes' onchange='change()'/><label for='yes'><i class="fa fa-lg fa-circle selc sp"></i>yes</label></div>
+      <div><input type='checkbox' checked=checked class='filter'
+                 name='filter' id='no-ltg' value='No' onchange='change()';/><label for='no'><i class="fa fa-lg fa-circle others sp"></i>no</label></div>
+    </div>
     <div id="map">
-      <button id="resetBt" onclick=location.reload()>Reset Map</button>
+      <button id="resetBt" onclick='reset()'>Return to Full Map Extent</button>
     </div>
 
     <script type="infowindow/html" id="infowindow_template">
@@ -65,6 +73,9 @@
     </script>
     
   </body>
+
+  
+  
 </html>
 Status API Training Shop Blog About
 © 2015 GitHub, Inc. Terms Privacy Security Contact
