--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Coal Ash</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-    <link rel="shortcut icon" href="http://cartodb.com/assets/favicon.ico" />
+    <link rel="shortcut icon" href="https://www.southernenvironment.org/favicon.ico">
     <!--JQUERY-->
     <script src='https://code.jquery.com/jquery-1.11.0.min.js'></script>
     <!--BOOTSTRAP-->
@@ -52,7 +52,7 @@
                  name='filter' id='yes-ltg' value='Yes' onchange='change()'/><label class="sp" for='yes'><i class="fa fa-lg fa-circle-o"></i>   yes</label></div>
       <div><input type='checkbox' checked=checked class='filter'
                  name='filter' id='no-ltg' value='No' onchange='change()';/><label class="sp" for='no'>no</label></div>
-      <h5>Clean-Up</h5>
+      <h5>Clean-Up Status</h5>
       <div><input type='checkbox' checked=checked class='filter'
                  name='filter' id='clean-progress' value='In Progress' onchange='change()'/><label class="sp" for='progress'><i class="fa fa-lg fa-circle sp clean1"></i>In Progress</label></div>
       <div><input type='checkbox' checked=checked class='filter'
