--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Coal Ash</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-    <link rel="shortcut icon" href="https://www.southernenvironment.org/favicon.ico">
+    <!--link rel="shortcut icon" href="https://www.southernenvironment.org/favicon.ico"-->
     <!--JQUERY-->
     <script src='https://code.jquery.com/jquery-1.11.0.min.js'></script>
     <!--BOOTSTRAP-->
