Updating legend disclaimer

--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
     </nav-->
     <div id='filters' class='ui-select'>
       <hr>
-      <p style="color: red;"><b>DISCLAIMER: This map is no longer maintained as a source of reference.</b></p>'
-      body += '<p><b>What is coal ash?</b></p>
+      <div><p style="color: red;"><b>DISCLAIMER: This map is no longer maintained as a source of reference.</b></p></div>
       <p class='legend'>Legend</p>
       <hr>
       <h5>Litigation</h5>
