Refining legend disclaimer sizing

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
       <div style="border-bottom:1px solid rgba(0,0,0,0.25); margin: 0; padding: 10px;"><i class="fa fa-lg fa-circle-o media sp"></i>Multimedia content</div>
     </nav-->
     <div id='filters' class='ui-select'>
-      <hr>
-      <div><p style="color: red;"><b>DISCLAIMER: This map is no longer maintained as a source of reference.</b></p></div>
       <p class='legend'>Legend</p>
+      <hr>
+      <div><p style="color: red;"><b>DISCLAIMER: This map is no longer<br>maintained as a source of reference.</b></p></div>
       <hr>
       <h5>Litigation</h5>
       <div><input type='checkbox' checked=checked class='filter'
